[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/BoxmanTitle.png" type="Texture" id=2]
[ext_resource path="res://Sprites/BackgroundCredits.png" type="Texture" id=3]
[ext_resource path="res://Fonts/Early GameBoy.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Sprites16px/PlayerNew.png" type="Texture" id=5]
[ext_resource path="res://Sprites16px/BoxBright.png" type="Texture" id=6]
[ext_resource path="res://Sprites16px/Place.png" type="Texture" id=7]
[ext_resource path="res://Sprites16px/BoxDark.png" type="Texture" id=8]
[ext_resource path="res://Sprites16px/Wall1.png" type="Texture" id=9]


[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 4 )

[node name="Menu" type="Node"]
script = ExtResource( 1 )

[node name="BoxmanTitle" type="Sprite" parent="."]
position = Vector2( 78, 22 )
texture = ExtResource( 2 )

[node name="BackgroundCredits" type="Sprite" parent="."]
position = Vector2( 80, 125 )
texture = ExtResource( 3 )

[node name="TitleText" type="RichTextLabel" parent="."]
visible = false
margin_left = 14.0
margin_top = 14.0
margin_right = 145.0
margin_bottom = 43.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.352941, 0.223529, 0.129412, 1 )
tab_size = 0
text = "WareHouse Worker
-sokoban clone-"

[node name="StartText" type="RichTextLabel" parent="."]
margin_left = 32.8527
margin_top = 66.0
margin_right = 91.8527
margin_bottom = 77.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.352941, 0.223529, 0.129412, 1 )
text = "Start"

[node name="XStartText" type="RichTextLabel" parent="."]
margin_left = 22.8527
margin_top = 66.0
margin_right = 81.8527
margin_bottom = 77.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.352941, 0.223529, 0.129412, 1 )
text = "x"

[node name="ColorsText" type="RichTextLabel" parent="."]
margin_left = 32.8527
margin_top = 80.0
margin_right = 141.853
margin_bottom = 91.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.352941, 0.223529, 0.129412, 1 )
text = "Change Colors"

[node name="XColorsText" type="RichTextLabel" parent="."]
margin_left = 22.8527
margin_top = 80.0
margin_right = 131.853
margin_bottom = 91.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.352941, 0.223529, 0.129412, 1 )
text = "x"

[node name="VolumeText" type="RichTextLabel" parent="."]
margin_left = 33.0
margin_top = 94.0
margin_right = 162.0
margin_bottom = 106.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.352941, 0.223529, 0.129412, 1 )
text = "Volume: full"

[node name="XVolumeText" type="RichTextLabel" parent="."]
margin_left = 22.8527
margin_top = 94.0
margin_right = 90.8527
margin_bottom = 105.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.352941, 0.223529, 0.129412, 1 )
text = "x"

[node name="GameDoneByText" type="RichTextLabel" parent="."]
margin_left = 16.0
margin_top = 114.0
margin_right = 152.0
margin_bottom = 143.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.419608, 0.54902, 0.258824, 1 )
text = "created by shake onigiri and tzoop"

[node name="Player" type="Sprite" parent="."]
position = Vector2( 44, 54 )
texture = ExtResource( 5 )

[node name="BoxBright" type="Sprite" parent="."]
position = Vector2( 76, 54 )
texture = ExtResource( 6 )

[node name="Place" type="Sprite" parent="."]
position = Vector2( 92, 54 )
texture = ExtResource( 7 )

[node name="BoxDark" type="Sprite" parent="."]
position = Vector2( 108, 54 )
texture = ExtResource( 8 )

[node name="Wall" type="Sprite" parent="."]
position = Vector2( 124, 54 )
texture = ExtResource( 9 )
